2024-05-06T08:18:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8966124568 # 247
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-06
* notice: last 14d: unq all: 19 117
* notice: prev accum: outdated-unq outdated-all / unq all: 633 3475 / 655 3562
* notice: next accum: outdated-unq outdated-all / unq all: 634 3477 / 656 3594
* notice: prev exec diff / last date diff / accum: unq all: +1 +32 -0 -0 / +1 +32 -0 -0 / 1 32
* notice: removed / changed dates: [2024-04-22] / [2024-05-06]

2024-05-05T16:18:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8959568502 # 245
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-05
* notice: last 14d: unq all: 18 87
* notice: prev accum: outdated-unq outdated-all / unq all: 633 3475 / 654 3560
* notice: next accum: outdated-unq outdated-all / unq all: 633 3475 / 655 3562
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-05-05]

2024-05-04T16:16:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8951761343 # 242
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-04
* notice: last 14d: unq all: 18 85
* notice: prev accum: outdated-unq outdated-all / unq all: 633 3475 / 653 3558
* notice: next accum: outdated-unq outdated-all / unq all: 633 3475 / 654 3560
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-05-04]

2024-05-04T08:16:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8949166933 # 241