@@ -1,6 +1,6 @@
 {
-  "count": 117,
-  "uniques": 19,
+  "count": 121,
+  "uniques": 20,
   "views": [
     {
       "timestamp": "2024-04-24T00:00:00Z",
@@ -60,6 +60,11 @@
     {
       "timestamp": "2024-05-06T00:00:00Z",
       "count": 32,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-07T00:00:00Z",
+      "count": 4,
       "uniques": 1
     }
   ]
